--- a/fiap-java-na-web-aula-5-SpringMVC/WebContent/WEB-INF/web.xml
+++ b/fiap-java-na-web-aula-5-SpringMVC/WebContent/WEB-INF/web.xml
@@ -15,11 +15,9 @@
 	<servlet>
 		<servlet-name>SpringMVC</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring-mvc.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
+		<init-param><param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/spring-mvc.xml</param-value>
+		</init-param><load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>SpringMVC</servlet-name>
@@ -27,4 +25,3 @@
 	</servlet-mapping>
 
 </web-app>
-
